Fixed spacing issue with MUI

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,10 +1,10 @@
-section {
+.topLogo {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
 #logo {
-    width: 30vw;
-
+    width: 300px;
+    padding: 20px 0px;
 }
